# explore-sensei

./: .dockerignore  .editorconfig  .env  .env.example  .env.local  .eslintrc.json  .gitignore  .prettierrc  .prettierrc.json  CHANGELOG.md  CODEOWNERS  COMPREHENSIVE_IMPROVEMENT_PLAN.md  CONTRIBUTING.md  Dockerfile  FINAL_HANDOVER_PACKAGE.md  MOBILE_OPTIMIZATION_SUMMARY.md  README.md  README_CAPACITOR.md  app-debug.apk  capacitor.config.ts  docker-compose.yml  eslint.config.js  explore-sensei-production.plan.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pyproject.toml  renovate.json  tailwind.config.ts  tsconfig.app.json  tsconfig.strict.json  tsconfig.vitest.json  vite.config.optimization.ts  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.husky/: pre-commit
config/: secrets-manager.example.json
docker/: otel-collector.yaml
docs/: CLIENT_APP_BLUEPRINT.md  DEPLOYMENT_CHECKLIST.md  DIVISION_IMPLEMENTATION_PLAN.md  FEATURES_AND_MAP_PAGE.md  FIRST_TIME_CONTRIBUTOR.md  GAMIFICATION.md  GAMIFICATION_FINISH_CHECKLIST.md  HUD_REDESIGN_PLAN.md  ML_RECOMMENDED_MODELS.md  PHASE_1_ANALYSIS.md  README.md  SECRETS_MANAGEMENT.md  SECURITY_HARDENING.md  SUPABASE_ADMIN_BOOTSTRAP.md
e2e/: auth.spec.ts  gamify-toggle.spec.ts  jobs.spec.ts  smoke.spec.ts  time-tracking.spec.ts
ml/: Dockerfile  README.md  pyproject.toml
ml/app/: main.py
ml/training/: labelstudio_to_yolo.py  sahi_infer.py  train_yolov8_seg.py
ml/utils/: geometry.py
public/: manifest.json  sw.js
scripts/: README-seeding.md  deploy-to-github.ps1  generate-openapi.ts  install_dependencies.ps1  install_dependencies.sh  loadtest.k6.js  run-migrations.ts  security-baseline.ts  seed.ts  setup-env.ps1  sync_assets.ts  verify-env.ts
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
supabase/: config.toml
tests/: analytics.test.ts  (+11 more)
(+311 files in other folders)
